--- a/style.css
+++ b/style.css
@@ -73,8 +73,7 @@ background:linear-gradient(0deg,gray, rgb(12, 12, 12));
 
 /* 3 */
 .btn-3 {
-  background: rgb(0,172,238);
-background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
+  background: gold;
   width: 130px;
   height: 40px;
   line-height: 42px;
@@ -94,7 +93,7 @@ background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
   content: "";
   right: 0;
   top: 0;
-   background: rgba(2,126,251,1);
+   background: gold;
   transition: all 0.3s ease;
 }
 .btn-3:before {
@@ -116,7 +115,7 @@ background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
   width: 100%;
 }
 .btn-3 span:hover{
-   color: rgba(2,126,251,1);
+   color: black;
 }
 .btn-3 span:before,
 .btn-3 span:after {
@@ -124,7 +123,7 @@ background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
   content: "";
   left: 0;
   bottom: 0;
-   background: rgba(2,126,251,1);
+   background: gold;
   transition: all 0.3s ease;
 }
 .btn-3 span:before {
