--- a/style.css
+++ b/style.css
@@ -604,9 +604,7 @@ background: linear-gradient(0deg, rgba(255,151,0,1) 0%, rgba(251,75,2,1) 100%);
   line-height: 42px;
   -webkit-perspective: 230px;
   perspective: 230px;
- 
 }
-
 .btn-12 span {
   background: olivedrab;
   display: block;
@@ -624,7 +622,6 @@ background: linear-gradient(0deg, rgba(255,151,0,1) 0%, rgba(251,75,2,1) 100%);
   box-sizing: border-box;
   -webkit-transition: all .3s;
   transition: all .3s;
- 
 }
 .btn-12 span:nth-child(1) {
   box-shadow:
@@ -638,7 +635,6 @@ background: linear-gradient(0deg, rgba(255,151,0,1) 0%, rgba(251,75,2,1) 100%);
   -webkit-transform-origin: 50% 50% -20px;
   -moz-transform-origin: 50% 50% -20px;
   transform-origin: 50% 50% -20px;
-  
 }
 .btn-12 span:nth-child(2) {
   -webkit-transform: rotateX(0deg);
@@ -647,7 +643,6 @@ background: linear-gradient(0deg, rgba(255,151,0,1) 0%, rgba(251,75,2,1) 100%);
   -webkit-transform-origin: 50% 50% -20px;
   -moz-transform-origin: 50% 50% -20px;
   transform-origin: 50% 50% -20px;
- 
 }
 .btn-12:hover span:nth-child(1) {
   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
@@ -661,13 +656,11 @@ background: linear-gradient(0deg, rgba(255,151,0,1) 0%, rgba(251,75,2,1) 100%);
   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
    7px 7px 20px 0px rgba(0,0,0,.1),
    4px 4px 5px 0px rgba(0,0,0,.1);
-  color: transparent;
+ color: transparent;
   -webkit-transform: rotateX(-90deg);
   -moz-transform: rotateX(-90deg);
   transform: rotateX(-90deg);
-  color:olive;
 }
-
 
 
 /* 13 */
@@ -687,7 +680,7 @@ background: linear-gradient(0deg, rgba(255,151,0,1) 0%, rgba(251,75,2,1) 100%);
   z-index: -1;
   border-radius: 5px;
    background-color: lime;
-background-image: linear-gradient(315deg, lime 26%, #fbfdfd 74%);
+background-image: linear-gradient(315deg, lime 24%,lime 74%);
   box-shadow:
    -7px -7px 20px 0px #fff9,
    -4px -4px 5px 0px #fff9,
@@ -698,7 +691,6 @@ background-image: linear-gradient(315deg, lime 26%, #fbfdfd 74%);
 .btn-13:hover {
   color: black;
 }
-
 .btn-13:hover:after {
   top: 0;
   height: 100%;
@@ -764,7 +756,7 @@ background-image: linear-gradient(315deg, lime 26%, #fbfdfd 74%);
   transition: all 0.3s ease;
 }
 .btn-15:hover {
-  color: black;
+  color: #fff;
 }
 .btn-15:hover:after {
   left: 0;
